# logic-analyzer

./: .clang-tidy  README.md
embedded/: CMakeLists.txt
embedded/include/: config.hpp  sampler.hpp
embedded/src/: main.cpp  read_pin.pio  sampler.cpp
host/: .clangd  CMakeLists.txt
host/include/: elements_of_ui.hpp  fst_parser.hpp  parser.hpp  pico_connect.hpp  vcd_parser.hpp
host/src/: elements_of_ui.cpp  fst_parser.cpp  main.cpp  parser.cpp  pico_connect.cpp  vcd_parser.cpp
